--- a/src/ui/AppLayout/styles.css
+++ b/src/ui/AppLayout/styles.css
@@ -1,5 +1,5 @@
 #app-bar {
-  background: #fff;
+  background: #0653F4;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -38,7 +38,7 @@
 
 #app-bar > .nav .nav-item a {
   text-decoration: none;
-  color: #777;
+  color: #FFF;
   text-transform: capitalize;
 }
 
