--- a/public/index.css
+++ b/public/index.css
@@ -1,9 +1,17 @@
 * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-  background: #eee;
-  font-family: "Tajawal", sans-serif;
+    background: #eee;
+    font-family: "Tajawal", sans-serif;
+}
+
+* {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+.ui.header {
+    font-family: 'Source Sans Pro', sans-serif;
 }
