--- a/src/styles/member.css
+++ b/src/styles/member.css
@@ -114,7 +114,7 @@
     display: flex;
     flex-direction: column;
     background: #FFFFFF;
-    width: 180px;
+    width: 220px;
     border-radius: 3px;
 }
 
@@ -127,7 +127,12 @@
     border-radius: 5px;
 }
 
-.page .page-container .page-menu .page-menu-option:hover {
+.page .page-container .page-menu .page-menu-option.active {
+    background: #1C2055;
+    color: #FFFFFF;
+}
+
+.page .page-container .page-menu .page-menu-option:hover:not(.active) {
     background: #4698A4;
     color: #FFFFFF;
 }
