--- a/src/styles/member.css
+++ b/src/styles/member.css
@@ -15,11 +15,7 @@
 }
 
 /*TODO : make it resposive*/
-.create-member-step {
-    width: 550px;
-}
-
-.edit-member-step {
+.create-member-step, .edit-member-step, .member-credential-step {
     width: 550px;
 }
 
