--- a/src/ui/AppLayout/styles.css
+++ b/src/ui/AppLayout/styles.css
@@ -1,5 +1,5 @@
 #app-bar {
-  background: #0653F4;
+  background: #4642BF;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -30,7 +30,7 @@
 }
 
 #app-bar > .nav .nav-item {
-  padding: 30px 20px;
+  padding: 20px 20px;
   font-size: 20px;
   font-weight: bold;
   position: relative;
