--- a/src/ui/AppLayout/styles.css
+++ b/src/ui/AppLayout/styles.css
@@ -1,60 +1,61 @@
 #app-bar {
-  background: #4642BF;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+    background: #2B2B2B;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 #app-bar > .logo {
-  padding: 12px 32px;
-  display: flex;
-  align-items: center;
+    padding: 12px 32px;
+    display: flex;
+    align-items: center;
 }
 
 #app-bar > .logo > img {
-  width: 48px;
-  height: 48px;
+    width: 48px;
+    height: 48px;
 }
+
 #app-bar > .logo > span {
-  margin: 0 16px;
-  font-size: 22px;
-  font-weight: bold;
+    margin: 0 16px;
+    font-size: 22px;
+    font-weight: bold;
 }
 
 #app-bar > .nav {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
 }
 
 #app-bar > .nav .nav-item {
-  padding: 20px 20px;
-  font-size: 20px;
-  font-weight: bold;
-  position: relative;
+    padding: 20px 20px;
+    font-size: 20px;
+    font-weight: bold;
+    position: relative;
 }
 
 #app-bar > .nav .nav-item a {
-  text-decoration: none;
-  color: #FFF;
-  text-transform: capitalize;
+    text-decoration: none;
+    color: #FFF;
+    text-transform: capitalize;
 }
 
 #app-bar > .nav .nav-item::after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 3px;
-  background: #349f8e;
-  transition: width 0.5s;
-  border-radius: 3px;
-  position: absolute;
-  bottom : 0;
-  left: 0;
+    content: "";
+    display: block;
+    width: 0;
+    height: 3px;
+    background: rgb(113, 102, 89);
+    transition: width 0.5s;
+    border-radius: 3px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 #app-bar > .nav .nav-item.selected::after {
-  width: 100%;
+    width: 100%;
 }
